test/good/automatic/base/without_input/ret_zero/0054.lat
/* Should evaluate if clause. */

int main() {
  if("andrzej" <= "andrzej2")
    return 0 ;
}
