test/bad/automatic/extension/class/compile_time/0013.lat
class return {
  int andrzej;
}

int main() {
  return janusz = new return;
  return janusz.andrzej;
}
